--- a/fields/week7.tex
+++ b/fields/week7.tex
@@ -97,7 +97,7 @@ For convenience, assume $(x - \theta) \mid F_1$. We have the following lemma:
     \item If $\bar{f}$ is irreducible, then the Galois group of $\bar{f}$ is transitive on its roots,
       thus the only possibililty is a cycle of length $n = \deg \bar{f}$ in $S_n$.
     \item If $\bar{f} = \bar{f}_1 \dotsm \bar{f}_r$, with each $\bar{f}_i$ irreducible.
-      Let the Galois group be $\langle \sigma \rangle$, then $\sigma$ should be
+      Let the Galois group be $\gen{\sigma}$, then $\sigma$ should be
       transitive on the roots of each $\bar{f}_i$. The only possibility of $\sigma$
       is a permutation composited by cycles of length $\deg \bar{f}_1, \dots, \deg \bar{f}_r$.
       That is, $\sigma = \cycle{\alpha_{1,1}, \dots, \alpha_{1, m_1}} \dotsm
