--- a/linear_repr/week15.tex
+++ b/linear_repr/week15.tex
@@ -360,7 +360,7 @@ representations of $G \times G'$.
     0 &= \frac{1}{\abs{G\times G'}} \sum_{(g,g')\in G\times G'}
     f(g,g')\ob{\chi_i(g)\chi_j'(g')} \\
     &= \frac{1}{\abs{G'}} \sum_{g'} \left( \frac{1}{\abs{G}}\sum_g f(g, g') \ob{\chi_i(g)} \right) \chi'_j(g') \\
-    &= \left\langle \frac{1}{\abs{G}} \sum_g f(g, \cdot) \ob{\chi_i(g)}, \chi'_j \right\rangle
+    &= \gen*{ \frac{1}{\abs{G}} \sum_g f(g, \cdot) \ob{\chi_i(g)}, \chi'_j }
   \end{align*}
   Since $\rho'_j$ are othonogal basis of $\Cc(G')$, we have $\frac{1}{\abs{G}} \sum_g f(g, g') \ob{\chi_i(g)}
   = 0$ for all $g'$.
