--- a/fields/week3.tex
+++ b/fields/week3.tex
@@ -11,24 +11,24 @@
 \end{definition}
 
 \begin{prop}
-  Given $L/K$, if $L$ is algebraically closed, then $L_a \triangleq
+  Given $L/K$, if $L$ is algebraically closed, then $L^\text{alg} \triangleq
   \Set{\alpha \in L \given \alpha \text{ is algebraic over } K}$ is an
   algebraic closure of $K$.
 
   \begin{proof}
-    By prop~\ref{prop:alg-elements-form-a-field}, $L_a$ is a field, and
-    by definition, $L/K$ is algebraic.
+    By prop~\ref{prop:alg-elements-form-a-field}, $L^\text{alg}$ is a field, and
+    by definition, $L^\text{alg}/K$ is algebraic.
 
-    Now we proof that for any $K \subseteq L$ and $f(x) \in K[x]$, $f(x)$
-    splits over $K$.  Using induction, $\deg f = 1$ is trivial.
-    If $\deg f > 1$, then since $f(x) \in K[x] \subseteq L[x]$,
-    $f$ has a root, say $\alpha$. so we could write $f(x) = (x - \alpha) g(x)$.
-    Then $g(x) \in K(\alpha)[x] \subseteq L[x]$. by induction, $g(x)$ splits
-    and hence $f(x)$ splits.
+    Now we show that for any $f(x) \in K[x]$, $f(x)$ splits over $L$.
+    Using induction, $\deg f = 1$ is trivial. If $\deg f > 1$, then since
+    $f(x) \in K[x] \subseteq L[x]$, $f$ has a root in $L$, say $\alpha$. so we could
+    write $f(x) = (x - \alpha) g(x)$. Then $g(x) \in K(\alpha)[x] \subseteq L[x]$.
+    By induction, $g(x)$ splits and hence $f(x)$ splits.
 
-    So for any $f(x) \in K[x]$, $f$ splits. Write $f(x) = (x - \alpha_1) \dots (x - \alpha_n)$,
-    then each $\alpha_i$ is algebraic over $K$, $\alpha_i \in L_a$ and
-    hence there product $f(x)$ splits in $L_a[x]$.
+    So for any $f(x) \in K[x]$, $f$ splits over $L$. Write
+    $f(x) = (x - \alpha_1) \dotsm (x - \alpha_n)$, then each $\alpha_i$ is
+    algebraic over $K \implies \alpha_i \in L^\text{alg}$ and hence
+    $f(x)$ splits over $L^\text{alg}[x]$.
   \end{proof}
 \end{prop}
 
@@ -74,10 +74,11 @@ In below we would use the Zorn's lemma heavily.
     Let $\tilde{J} = \max(J_1, J_2)$, then $x, y \in \tilde{J}$
     which implies $x + y \in \tilde{J}$, and it is easy to check that for any $x \in R, y \in J$, $xy \in J$.
 
-    Also, $J$ is proper since $1 \not\in J$, or else $1 \in J_i$ and thus $J_i = R$ which leads to
-    an contradiction.
+    Also, $J$ is proper since $1 \not\in J$, or else $1 \in J_i$ and thus $J_i = R$
+    which leads to a contradiction.
 
-    By Zorn's lemma, there exists a maximal element in $S$, and thus it is a maximal ideal which contains $I$.
+    By Zorn's lemma, there exists a maximal element in $S$, and thus it is a
+    maximal ideal which contains $I$.
   \end{proof}
 \end{lemma}
 
@@ -85,57 +86,63 @@ In below we would use the Zorn's lemma heavily.
   If $K$ is a field, then there exists an algebraic closure $L$ of $K$.
 
   \begin{proof}
-    Let $S = \Set{x_f \given f(x) \in K[x] \text{ with } \deg f \geq 1}$ be the set of variables indexed by non-constant
-    polynomial in $K[x]$. Consider the polynomial ring $K[S]$ and $I = \langle f(x_f) : f \in K[x] \text{ with } \deg f \geq 1 \rangle$,
+    Let $S = \Set{x_f \given f(x) \in K[x] \text{ with } \deg f \geq 1}$ be the
+    set of variables indexed by non-constant polynomial in $K[x]$. Consider
+    the polynomial ring $K[S]$ and $I = \gen{ f(x_f) : f \in K[x] \text{ with } \deg f \geq 1 }$,
     which is an ideal in $K[S]$.
 
-    We claim that $I \neq K[S]$. If not then $1 \in I \implies 1 = \sum_{i = 1}^n g_i f_i(x_{f_i})$.
-    Write $x_i \triangleq x_{f_i}$ for $i = 1, 2, \cdots, n$. Also, by definition $g_i$ only involves a finite number of
-    variable in $S$, so we could set $g_i \in K[x_1, x_2, \cdots, x_m]$ with $m \geq n$. That is, $1 = \sum_{i = 1}^n g_i(x_1, x_2,
-    \cdots, x_m) f_i(x_i)$. Let $\Sigma$ be a splitting field for $f(x) = f_1(x) f_2(x) \cdots f_n(x)$ and define $\alpha_i \in \Sigma$
+    We claim that $I \neq K[S]$. If not, then $1 \in I \implies 1 = \sum_{i = 1}^n g_i f_i(x_{f_i})$.
+    Write $x_i \triangleq x_{f_i}$ for $i = 1, 2, \cdots, n$. Also, by definition
+    $g_i$ only involves a finite number of variable in $S$, so we could set
+    $g_i \in K[x_1, x_2, \dots, x_m]$ with $m \geq n$. That is,
+    $1 = \sum_{i = 1}^n g_i(x_1, x_2, \dots, x_m) f_i(x_i)$. Let $\Sigma$ be a
+    splitting field for $f(x) = f_1(x) f_2(x) \dotsm f_n(x)$ and define $\alpha_i \in \Sigma$
     which satisfies $f_i(\alpha_i) = 0$ and $a_i = 0$ for $n+1 \leq i \leq m$. Then
-    $1 = \sum_{i = 1}^n g(\alpha_1, \alpha_2, \cdots, \alpha_m) f_i(\alpha_i) = 0$ which leads to an contradiction.
+    $1 = \sum_{i = 1}^n g(\alpha_1, \alpha_2, \dots, \alpha_m) f_i(\alpha_i) = 0$
+    , which leads to a contradiction.
 
     By lemma~\ref{lemma:max-ideal-exists}, there exists a maximal ideal $M$ s.t. $I \subseteq M$.
 
-    Consider $K \hookrightarrow F_1 \triangleq K[S] / M$, and then for all $f \in K[x]$, $f(\bar{x}_f) = \bar{0}$ in $F_1$.
-    By induction, $\exists F_1 \subseteq F_2 \subseteq F_3 \subseteq \cdots$
+    Consider $K \toone F_1 \triangleq K[S] / M$, and then for all $f \in K[x]$,
+    $f(\bar{x}_f) = \bar{0}$ in $F_1$.  By induction, $\exists F_1 \subseteq F_2 \subseteq F_3 \subseteq \cdots$
     which satisfies $f(x) \in F_n[x]$ has a root in $F_{n+1}$
-    Let $F = \bigcup_{i = 1}^\infty F_i$ which is algebraically closed since if $f(x) \in F[x]$ then $f(x) \in F_m[x]$
-    for some $m$ and thus $f(x)$ has a root in $F_{m+1} \subseteq F$.
+    Let $F = \bigcup_{i = 1}^\infty F_i$ which is algebraically closed since if
+    $f(x) \in F[x]$ then $f(x) \in F_m[x]$ for some $m$ and thus $f(x)$ has a root in $F_{m+1} \subseteq F$.
 
-    Finally $L \triangleq \{ \alpha \in F \mid \alpha \text{ is algebraic over } K \}$ is an algebraic closure of $K$.
+    Finally $L \triangleq \Set{ \alpha \in F \given \alpha \text{ is algebraic over } K }$
+    is an algebraic closure of $K$.
   \end{proof}
 
   \begin{lemma} \label{lemma:homo-extend-to-alg-closed-extension}
-    If $L_1 / K$ is algebraic and $\tau: K \to L_2$ is a non-zero homomorphism with $L_2$ being algebraically closed,
-    then $\tau$ could be extend to $\sigma: L_1 \to L_2$.
+    If $L_1 / K$ is algebraic and $\tau: K \to L_2$ is a non-zero homomorphism
+    with $L_2$ being algebraically closed, then $\tau$ could be extend to $\sigma: L_1 \to L_2$.
 
     \begin{proof}
-      Consider $S = \{ (M, \theta) \mid K \subset M \subset L_1,\ \theta: M \to L_2 \text{ with } \theta\big|_K = \tau\}$,
-      which is not an empty set since $(K, \tau) \in S$.
+      Consider $S = \Set*{ (M, \theta) \given K \subset M \subset L_1,\ \theta: M \to L_2
+      \text{ with } \theta\big|_K = \tau }$, which is not an empty set since $(K, \tau) \in S$.
 
       Define a partial order on $S$ by $(M_1, \theta_1) \preceq (M_2, \theta_2)
       \iff M_1 \subseteq M_2 \,\land\, \theta_2 \big|_{M_1} = \theta_1$.
-      Given any chain $\{(M_i, \theta_i) : i \in \Lambda \}$, let $N = \bigcup_{i = 1}^\infty M_i$ and
-      $\theta = \alpha :: N \mapsto \theta_i(\alpha)$ if $\alpha \in M_i$. It could
-      be check easily that this map is well defined, and $(N, \theta)$ is
-      a least upper bound in $S$ for this chain.  By Zorn's lemma, there exists a max element $(M, \sigma)$ in $S$.
+      Given any chain $\Set{(M_i, \theta_i) \colon i \in \Lambda }$, let
+      $N = \bigcup_{i = 1}^\infty M_i$ and $\theta = \alpha :: N \mapsto \theta_i(\alpha)$
+      if $\alpha \in M_i$. It could be check easily that this map is well defined,
+      and $(N, \theta)$ is a least upper bound in $S$ for this chain.
+      By Zorn's lemma, there exists a max element $(M, \sigma)$ in $S$.
 
       Now, if $M \neq L_1$, then pick $\alpha \in L_1 \setminus M$. Since $L_1/K$ is algebraic,
       the minimal polynomial $m_{\alpha, K}$ exists. Since $L_2$ algebraically closed, $\bar\sigma(m_{\alpha, K})$
       has a root in $L_2$, and thus by lemma~\ref{lemma:extension-exists-condition},
-      $\sigma$ could be extend to $\sigma': M(\alpha) \to L_2$ which contradict the maximality of $(M, \sigma)$.
-      Thus $M = L_1$.
+      $\sigma$ could be extend to $\sigma': M(\alpha) \to L_2$ which contradicts
+      the maximality of $(M, \sigma)$. Thus $M = L_1$.
     \end{proof}
   \end{lemma}
 
   \begin{theorem}
     Any two algebraic closures $L_1, L_2$ of $K$ are isomorphic.
     \begin{proof}
-      Consider the inclusion map $\text{id}_K :: K \hookrightarrow L_1$.
+      Consider the inclusion map $\Id_K :: K \toone L_1$.
       By Lemma~\ref{lemma:homo-extend-to-alg-closed-extension},
-      $\text{id}_K$ could be extend to $\sigma :: L_2 \to L_1$ such that $\sigma\big|_K = \text{id}_K$.
+      $\Id_K$ could be extend to $\sigma :: L_2 \to L_1$ such that $\sigma\big|_K = \Id_K$.
       Since $\sigma \neq 0$, $\sigma(L_2) \cong L_2$.
       Also, $L_2$ is algebraically closed implies $\sigma(L_2)$ is algebraically closed.
       So for any $\alpha \in L_1$, $\alpha$ is algebraic over $K$ and thus over $\sigma(L_2)$,
@@ -174,7 +181,7 @@ In below we would use the Zorn's lemma heavily.
   Notice that $x^p - b = x^p - a^p = (x - a)^p$, and $x^p - b$ is irreducible in $K$, or else
   if $x^p - b = g(x) h(x)$ in $K[x]$, then write $g(x) = (x - \alpha)^k, h(x) = (x - \alpha)^{n-k}$,
   but then expand $g(x)$ and we would get $\alpha^k \in K$, since $\alpha^p \in K$ and
-  $\gcd(k, p) = 1$ implies $\alpha \in K$ which leads to an contradiction.
+  $\gcd(k, p) = 1$ implies $\alpha \in K$ which leads to a contradiction.
 
   By above we know that $x^p - b$ is inseparable.
 \end{example}
@@ -193,11 +200,11 @@ In below we would use the Zorn's lemma heavily.
 \end{example}
 
 \begin{fact}
-  $K$ is perfect if an only if for any irreducible polynomial $f(x) \in K[x]$, $f$ is separable.
+  $K$ is perfect if and only if for any irreducible polynomial $f(x) \in K[x]$, $f$ is separable.
 
-  Also, we can find that any irreducible polynomial $f(x) \in K[x]$ is not separable over $K$
+  Also, we can find that an irreducible polynomial $f(x) \in K[x]$ is not separable over $K$
   if and only if $\Char K = p > 0$ and $f(x) = g(x^p)$ for some $g(x) \in K[x]$, where
-  $g(x)$ is irreducible and not all coefficient of $g$ is in $K^p$.
+  $g(x)$ is irreducible and not all coefficients of $g$ is in $K^p$.
 
   Finally, if $\Char K = 0$, then $K$ is separable.
 \end{fact}
@@ -211,7 +218,8 @@ In below we would use the Zorn's lemma heavily.
   then there are $r < d$ such monomorphisms.
 
   \begin{proof}
-    Observe that $m_{\alpha, K}$ is separable over $K$ if an only if $\bar\tau(m_{\alpha, K})$ is separable over $\tau(K)$.
+    Observe that $m_{\alpha, K}$ is separable over $K$ if and only if $\bar\tau(m_{\alpha, K})$
+    is separable over $\tau(K)$.
     Extend $K$ to $\Sigma$, $\tau(K)$ to $\Sigma'$, where $\Sigma, \Sigma'$ are the splitting
     field of $m_{\alpha, K}$ and $\bar\tau(m_{\alpha, K})$, respectively.
     Since $K \cong \tau(K)$, by theorem~\ref{thm:two-splitting-field-are-isom}, $\Sigma \cong \Sigma'$.
@@ -221,7 +229,8 @@ In below we would use the Zorn's lemma heavily.
     $\bar\tau(m_{\alpha, K}) = (x - \tau'(\alpha_1)) (x - \tau'(\alpha_2)) \cdots (x - \tau'(\alpha_n))$.
     where $\tau' :: \Sigma \isoto \Sigma'$ and $\alpha_i \neq \alpha_j \iff \tau'(\alpha_i) \neq \tau'(\alpha_j)$.
     Thus if $\alpha$ is separable, $\bar\tau(m_{\alpha, K})$ has $d$ distinct roots in $L$.
-    By corollary~\ref{coro:num-of-extensions}, there are exactly $d$ monomorphisms $\sigma$ with $\sigma\big|_K = \tau$.
+    By corollary~\ref{coro:num-of-extensions}, there are exactly $d$ monomorphisms
+    $\sigma$ with $\sigma\big|_K = \tau$.
 
     Otherwise, there are $r$ roots in $L$ where $r < d$, and thus there are $r < d$ such monomorphisms.
   \end{proof}
@@ -236,13 +245,14 @@ In below we would use the Zorn's lemma heavily.
   \begin{proof}
     By induction on $d$, if $d = 1$ we could simply let $\sigma = \tau$.
 
-    Now for $d > 1$, let $\alpha \in K' \setminus K$.
-    By prop $1$, $\exists$ exactly $[K(\alpha): K]$ monomorphisms $\tau_1: K(\alpha) \to L$.
+    For $d > 1$, consider $\alpha \in K' \setminus K$.
+    By prop \ref{prop:separable-and-split-have-most-embeddings}, there exists
+    exactly $[K(\alpha): K]$ monomorphisms $\tau_1: K(\alpha) \to L$.
 
     Now, for any $\beta \in \quot{K'}{K(\alpha)}$,
     $m_{\beta, K(\alpha)} \mid m_{\beta, K}$ and thus $m_{\beta, K(\alpha)}$ is separable
-    and $\bar\tau(m_{\beta, K(\alpha)})$ splits in $L$ since $\bar\tau(m_{\beta, K})$ splits.
-    These implies that $\quot{K'}{K(\alpha)}$ is separable and $\forall \beta \in K(\alpha),
+    and $\bar\tau_1(m_{\beta, K(\alpha)})$ splits over $L$ since $\bar\tau(m_{\beta, K})$ splits.
+    These imply that $\quot{K'}{K(\alpha)}$ is separable and $\forall \beta \in K(\alpha),
     m_{\beta, K(\alpha)}$ splits in $L$. Thus, $K(\alpha)$ satisfies the hypothesis,
     and by induction, there are exactly $[K': K(\alpha)]$ monomorphisms $\sigma :: K' \to L$
     such that $\sigma\big|_{K(\alpha)} = \tau_1$, thus there are $[K': K(\alpha)][K(\alpha): k]
@@ -271,14 +281,14 @@ In below we would use the Zorn's lemma heavily.
       & K \arrow[ur, hookrightarrow] \arrow[ul, hookrightarrow] &
     \end{tikzcd}
   \]
-  Where (1) holds because these field are both isomorphic to $\quot{K[x]}{\langle m_{\beta, K} \rangle}$. \\
+  Where (1) holds because these fields are both isomorphic to $\quot{K[x]}{\gen{ m_{\beta, K} }}$. \\
   (2) holds because $\tau$ obviously fixes $K$, and hence $K(R)$ is a splitting field of $f$
   and $K(R, \gamma)$ is a splitting field of $\bar\tau(f)$. By theorem~\ref{thm:two-splitting-field-are-isom},
-  $K(R)$ and $K(R, \gamma)$ is then isomorphic.
+  $K(R)$ and $K(R, \gamma)$ are isomorphic.
 
-  Thus we have $[K(R): K] = [K(R): K(\beta)][K(\beta): K] = [K(R, \gamma): K(\gamma)][K(\gamma): K]
-  = [K(R, \gamma): K]$, and $[K(R): K] = [K(R, \gamma): K] = [K(\gamma, R): K(R)][K(R): K]$
-  which implies $[K(\gamma, R): K(R)] = 1$, hence $\gamma \in R$.
+  Thus we have $[K(R): K] = [K(R, \gamma): K]$ along with
+  $[K(R, \gamma): K] = [K(\gamma, R): K(R)][K(R): K]$.
+  This implies $[K(\gamma, R): K(R)] = 1$, hence $\gamma \in R$.
   \end{proof}
 \end{lemma}
 
@@ -290,20 +300,21 @@ In below we would use the Zorn's lemma heavily.
   \begin{proof}
     Let $L$ be a splitting field of $f(x) = \prod m_{\alpha_i, K}$.
 
-    We claim that there are $[K_j: K]$ monomorphisms $\tau_j:: K_j \to L$ with $\tau_j \big|_K = \text{id}_K$.
-    Use induction on $j$, if $j = 0$, then there are only $1$ such monomorphism, namely itself $\text{id}_K$.
+    We claim that there are $[K_j: K]$ monomorphisms $\tau_j:: K_j \to L$ with $\tau_j \big|_K = \Id_K$.
+    Use induction on $j$, if $j = 0$, then there are only $1$ such monomorphism, namely itself $\Id_K$.
 
     For $j > 0$, observe that $m_{\alpha_j, K_{i-1}} \mid m_{\alpha_j, K}$, and since $\bar\tau_{j-1}
     (m_{\alpha_j, K}) = m_{\alpha_j, K}$ splits over $L$, $m_{\alpha_j, K_{i-1}}$ also splits over $L$.
-    By hypothesis, $\alpha_j$ is separable over $K_{j-1}$, so by prop~\ref{prop:separable-and-split-have-most-embeddings},
+    By hypothesis, $\alpha_j$ is separable over $K_{j-1}$, so by
+    prop~\ref{prop:separable-and-split-have-most-embeddings},
     there are $[K_j: K_{j-1}]$ such monomorphisms $\tau_j:: K_j \to L$ with $\tau_j \big|_{K-1} = \tau_{j-1}$.
     By induction, there are $[K_{j-1}: K]$ monomorphisms $\tau_{j-1}:: K_{j-1} \to L$
-    with $\tau_j \big|_K = \text{id}_K$. Compose these monomorphisms, we know that there
-    exists exactly $[K_j: K_{j-1}][K_{j-1}: K] = [K_j: K]$ monomorphisms $\tau_j:: K_j \to L$ such that
-    $\tau_j \big|_K = \text{id}_K$.
+    with $\tau_j \big|_K = \Id_K$. Compose these monomorphisms, we know that there
+    exist exactly $[K_j: K_{j-1}][K_{j-1}: K] = [K_j: K]$ monomorphisms $\tau_j:: K_j \to L$
+    such that $\tau_j \big|_K = \Id_K$.
 
     So there are exactly $[K_n: K]$ monomorphisms $\tau :: K(\alpha_1, \dots, \alpha_n) \to L$
-    with $\tau\big|_K = \text{id}_K$.
+    with $\tau\big|_K = \Id_K$.
     By prop~\ref{prop:separable-field-split-have-most-embeddings}, $K(\alpha_1, \dots, \alpha_n)$ is separable.
   \end{proof}
 \end{theorem}
@@ -315,8 +326,9 @@ In below we would use the Zorn's lemma heavily.
     ``$\Rightarrow$'': If $L/K$ is separable, then $M/K$ is obviously separable. For any $\beta \in L$,
     $m_{\beta, M} \mid m_{\beta, K}$ so $m_{\beta, M}$ is separable which implies $L/M$ is separable.
 
-    ``$\Leftarrow$'': For any $\alpha \in L$, write $m_{\alpha, M} = x^n + a_{n-1}x^{n-1} + \dots + a_1 x + a_0$,
-    then $m_{\alpha, M}$ is separable implies that $\alpha$ is separable over $K(a_0, \dots, a_{n-1})$.
+    ``$\Leftarrow$'': For any $\alpha \in L$, write $m_{\alpha, M} = x^n + a_{n-1}x^{n-1} + \dots + a_1 x + a_0$.
+    Then $m_{\alpha, M}$ is separable implies $\alpha$ is separable over $K(a_0, \dots, a_{n-1})$.
+    Note that $a_0, \dots, a_{n-1} \in M$ are separable over $K$.
     By theorem~\ref{thm:separable-elements-form-separable-field},
     $K(a_0, a_1, \dots, a_{n-1}, \alpha) / K$ is separable, hence each $\alpha$ is separable over $K$,
     thus $L/K$ is separable.
