--- a/fields/week5.tex
+++ b/fields/week5.tex
@@ -17,7 +17,8 @@
     \item The cyclotomic field $\Qb(\zeta_n)$ is the splitting field of $x^n - 1$ over $\Qb$.
     \item $\zeta$ is called an $n$th root of unity if $\zeta^n = 1$. $\mathcal{U} = \gen{\zeta}$
       is the multiplicative group of $n$th roots of unity.
-    \item $\zeta_n$ is called a primitive $n$th root of unity if $\zeta^n = 1$ but $\zeta^m \ne 1, \, \forall 0 < m < n$.
+    \item $\zeta_n$ is called a primitive $n$th root of unity if $\zeta^n = 1$ but
+      $\zeta^m \ne 1, \, \forall 0 < m < n$.
     \item The $n$th cyclotomic polynomial is defined as
       \[ \Phi_n \triangleq \prod_{\gcd(k, n) = 1} (x - \zeta_n^k) \implies \deg \Phi_n = \varphi(n) \]
   \end{itemize}
