--- a/fields/week8.tex
+++ b/fields/week8.tex
@@ -276,11 +276,12 @@ And $\trace(T_\alpha) = -a_{n-1}, \det(T_\alpha) = (-1)^n a_0$.
   \begin{proof}
     ``$\Rightarrow$'': If not, then the determinant is $0$. Then
     \[ \left\{
-          \begin{array}{cr}
-          \sigma_1(\alpha_1) x_1 + \dots + \sigma_n(\alpha_1) x_n &= 0 \\
-          \sigma_1(\alpha_2) x_1 + \dots + \sigma_n(\alpha_2) x_n &= 0 \\
-          \vdots & \vdots \\
-          \sigma_1(\alpha_n) x_1 + \dots + \sigma_n(\alpha_n) x_n &= 0
+        \arraycolsep=2pt
+        \begin{array}{ccc}
+          \sigma_1(\alpha_1) x_1 + \dots + \sigma_n(\alpha_1) x_n &=& 0 \\
+          \sigma_1(\alpha_2) x_1 + \dots + \sigma_n(\alpha_2) x_n &=& 0 \\
+          \vdots & & \vdots \\
+          \sigma_1(\alpha_n) x_1 + \dots + \sigma_n(\alpha_n) x_n &=& 0
         \end{array}
       \right.
     \]
